Finalizacion estructura monitoreo y parte de Gerald